--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,227 @@
 jakub_marciniak_plate_detector.zip
 plate_detector_jakub_marciniak.zip
+font.py
+results_adam.json
+results_data.json
+results_extended.json
+results_newFont.json
+results.json
+adam/IMG_1859.jpg
+adam/IMG_1860.jpg
+adam/IMG_1861.jpg
+adam/IMG_1862.jpg
+adam/IMG_1863.jpg
+adam/IMG_1865.jpg
+adam/IMG_1866.jpg
+adam/IMG_1867.jpg
+adam/IMG_1868.jpg
+adam/IMG_1869.jpg
+adam/IMG_7079.jpg
+adam/IMG_7081.jpg
+adam/IMG_7082.jpg
+data/1.jpg
+data/2.jpg
+data/3.jpg
+data/4.jpg
+data/5.jpg
+data/6.jpg
+data/7.jpg
+data/8.jpg
+data/9.jpg
+data/10.jpg
+data/2023-05-08_1.jpg
+data/2023-05-08_2.jpg
+data/2023-05-08_3.jpg
+data/2023-05-08_4.jpg
+data/2023-05-08_5.jpg
+data/2023-05-08_6.jpg
+data/2023-05-08_7.jpg
+data/2023-05-08_8.jpg
+data/2023-05-08_9.jpg
+data/2023-05-08_10.jpg
+data/2023-05-08_11.jpg
+data/2023-05-08_12.jpg
+data/2023-05-08_13.jpg
+data/2023-05-08_14.jpg
+data/2023-05-08_15.jpg
+data/2023-05-08_16.jpg
+data/2023-05-08_17.jpg
+data/2023-05-08_18.jpg
+data/2023-05-08_19.jpg
+data/IMG_1704.JPG
+data/IMG_1705.JPG
+data/IMG_1706.JPG
+data/IMG_1707.JPG
+data/IMG_1708.JPG
+data/IMG_1709.JPG
+data/IMG_1710.JPG
+data/IMG_1711.JPG
+data/IMG_1712.JPG
+data/IMG_1713.JPG
+data/IMG_1714.JPG
+data/IMG_1715.JPG
+data/IMG_1716.JPG
+data/IMG_1717.JPG
+data/IMG_1718.JPG
+data/IMG_1719.JPG
+data/IMG_1720.JPG
+data/IMG_1721.JPG
+data/IMG_1722.JPG
+data/IMG_1723.JPG
+data/IMG_1724.JPG
+data/IMG_1725.JPG
+data/IMG_1726.JPG
+data/IMG_1727.JPG
+data/IMG_1728.JPG
+data/IMG_1742.JPG
+data/IMG_1743.JPG
+data/IMG_1744.JPG
+data/IMG_1745.JPG
+data/IMG_1746.JPG
+data/IMG_1747.JPG
+data/IMG_1748.JPG
+data/IMG_1749.JPG
+data/IMG_1750.JPG
+data/IMG_1751.JPG
+data/IMG_1752.JPG
+data/IMG_1753.JPG
+data/IMG_1754.JPG
+data/IMG_1755.JPG
+data/IMG_1756.JPG
+data/IMG_1757.JPG
+data/IMG_1758.JPG
+data/IMG_1759.JPG
+data/IMG_1760.JPG
+data/IMG_1761.JPG
+data/IMG_1762.JPG
+data/IMG_1763.JPG
+data/img_3938.jpg
+data/img_3939.jpg
+data/img_3940.jpg
+data/img_3941.jpg
+data/img_3942.jpg
+data/img_3943.jpg
+data/img_3944.jpg
+data/img_3945.jpg
+data/img_3946.jpg
+data/img_3947.jpg
+data/img_3948.jpg
+data/img_3951.jpg
+data/img_3952.jpg
+data/img_3953.jpg
+data/img_3954.jpg
+data/img_3955.jpg
+data/img_3956.jpg
+data/img_3957.jpg
+data/img_3958.jpg
+data/img_3959.jpg
+data/img_3960.jpg
+data/img_3961.jpg
+data/img_3962.jpg
+data/img_3963.jpg
+data/img_3964.jpg
+data/img_3965.jpg
+data/img_3966.jpg
+data/img_3967.jpg
+data/img_3968.jpg
+data/img_3969.jpg
+data/img_3970.jpg
+data/img_3971.jpg
+diff/img_3940.jpg
+image/2023-05-08 (19).jpg
+letters/W.jpg
+letters2/5.jpg
+letters2/7.jpg
+letters2/9.jpg
+letters_backup/6.jpg
+letters_backup/W.jpg
+newOnly/1.jpg
+newOnly/2.jpg
+newOnly/3.jpg
+newOnly/4.jpg
+newOnly/5.jpg
+newOnly/6.jpg
+newOnly/7.jpg
+newOnly/8.jpg
+newOnly/9.jpg
+newOnly/10.jpg
+newOnly/IMG_1704.JPG
+newOnly/IMG_1705.JPG
+newOnly/IMG_1706.JPG
+newOnly/IMG_1707.JPG
+newOnly/IMG_1708.JPG
+newOnly/IMG_1709.JPG
+newOnly/IMG_1710.JPG
+newOnly/IMG_1711.JPG
+newOnly/IMG_1712.JPG
+newOnly/IMG_1713.JPG
+newOnly/IMG_1714.JPG
+newOnly/IMG_1715.JPG
+newOnly/IMG_1716.JPG
+newOnly/IMG_1717.JPG
+newOnly/IMG_1718.JPG
+newOnly/IMG_1719.JPG
+newOnly/IMG_1720.JPG
+newOnly/IMG_1721.JPG
+newOnly/IMG_1722.JPG
+newOnly/IMG_1723.JPG
+newOnly/IMG_1724.JPG
+newOnly/IMG_1725.JPG
+newOnly/IMG_1726.JPG
+newOnly/IMG_1727.JPG
+newOnly/IMG_1728.JPG
+newOnly/IMG_1742.JPG
+newOnly/IMG_1743.JPG
+newOnly/IMG_1744.JPG
+newOnly/IMG_1745.JPG
+newOnly/IMG_1746.JPG
+newOnly/IMG_1747.JPG
+newOnly/IMG_1748.JPG
+newOnly/IMG_1749.JPG
+newOnly/IMG_1750.JPG
+newOnly/IMG_1751.JPG
+newOnly/IMG_1752.JPG
+newOnly/IMG_1753.JPG
+newOnly/IMG_1754.JPG
+newOnly/IMG_1755.JPG
+newOnly/IMG_1756.JPG
+newOnly/IMG_1757.JPG
+newOnly/IMG_1758.JPG
+newOnly/IMG_1759.JPG
+newOnly/IMG_1760.JPG
+newOnly/IMG_1761.JPG
+newOnly/IMG_1762.JPG
+newOnly/IMG_1763.JPG
+newOnly/img_3938.jpg
+newOnly/img_3939.jpg
+newOnly/img_3940.jpg
+newOnly/img_3941.jpg
+newOnly/img_3942.jpg
+newOnly/img_3943.jpg
+newOnly/img_3944.jpg
+newOnly/img_3945.jpg
+newOnly/img_3946.jpg
+newOnly/img_3947.jpg
+newOnly/img_3948.jpg
+newOnly/img_3951.jpg
+newOnly/img_3952.jpg
+newOnly/img_3953.jpg
+newOnly/img_3954.jpg
+newOnly/img_3955.jpg
+newOnly/img_3956.jpg
+newOnly/img_3957.jpg
+newOnly/img_3958.jpg
+newOnly/img_3959.jpg
+newOnly/img_3960.jpg
+newOnly/img_3961.jpg
+newOnly/img_3962.jpg
+newOnly/img_3963.jpg
+newOnly/img_3964.jpg
+newOnly/img_3965.jpg
+newOnly/img_3966.jpg
+newOnly/img_3967.jpg
+newOnly/img_3968.jpg
+newOnly/img_3969.jpg
+newOnly/img_3970.jpg
+newOnly/img_3971.jpg
+processing/__pycache__/utils.cpython-310.pyc
